# pkoffee-solution

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  codemeta.json  latexmkrc  model_to_latex.py  paper.tex  pixi.toml  pyproject.toml  pytest.ini  ruff.toml  tex-packages.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  paper.yml  security.yml  test.yml  update-lockfiles.yml
analysis/: coffee_productivity.csv
doc/: analysis.ipynb  mkdocs.yml
doc/css/: code_select.css
doc/doc_src/: configuration.md  example_script.md  installation.md  license.md  usage.md
doc/doc_src/example_config/: example_config.yml
doc/doc_src/example_data/: coffee_productivity.csv
doc/doc_src/snippets/: example_notebook.ipynb  example_script.py
docker/: Dockerfile
docs/: analysis.ipynb  conf.py  index.rst  paper.rst  pkoffee.rst  readme.rst
paper/: ima-authoring-template.cls  model_to_latex.py  paper.tex  tex-packages.txt
pkoffee/: __init__.py  cli.py  data.py  metrics.py  models.py  visualization.py
recipe/: pixi.toml  recipe.yml
source/: conf.py  index.rst  modules.rst
src/pkoffee/: __init__.py  cli.py  data.py  fit_model.py  fit_model_io.py  fit_models.py  log.py  metrics.py  parametric_function.py  productivity_analysis.py  visualization.py
tests/: test_data.py  test_fit_model.py  test_fit_model_io.py  test_fit_models.py  test_metrics.py  test_models.py  test_parametric_function.py
