[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkoffee"
version = "0.1.0"
description = "Coffee productivity analysis with statistical modeling"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Thomas Vuillaume", email = "thomas.vuillaume@lapp.in2p3.fr"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "mypy>=0.950",
    "ruff>=0.0.260",
]

[project.scripts]
pkoffee-sol = "pkoffee.cli:main"

[tool.setuptools.packages.find]
include = ["pkoffee*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
pkoffee = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.10"
numpy = ">=1.20.0"
pandas = ">=1.3.0"
scipy = ">=1.7.0"
matplotlib = ">=3.4.0"
seaborn = ">=0.11.0"
pip = "*"

[tool.pixi.feature.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=3.0.0"
mypy = ">=0.950"
ruff = ">=0.0.260"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
test = "pytest tests/"
test-cov = "pytest tests/ --cov=pkoffee --cov-report=term-missing"
lint = "ruff check pkoffee/"
typecheck = "mypy pkoffee/"
format = "ruff format pkoffee/"
